# pangolier

./: .flake8  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: flake8.yml  publish.yml  type-check.yml  unittest.yml
docs/: about.rst  bin-op.rst  conf.py  functions.rst  index.rst  install.rst  simple-usage.rst
pangolier/: bin_op.py  common.py  filters.py  functions.py  label.py  metrics.py  prefixes.py
tests/: test_bin_op.py  test_filter.py  test_function.py  test_label.py  test_prefix.py  test_pretty.py  utils.py
